--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>5.7.3</version>
+            <groupId>com.github.ffcfalcos</groupId>
+            <artifactId>webservice-manager</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ffcfalcos</groupId>
+            <artifactId>common-dao</artifactId>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
