--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -96,6 +96,10 @@
         <env-entry-type>java.lang.String</env-entry-type>
         <env-entry-value>*</env-entry-value>
     </env-entry>
-
+    <env-entry>
+        <env-entry-name>log-path</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>D:\_Code_programmes\Programme_Java\PPM\logs\logs.log</env-entry-value>
+    </env-entry>
 
 </web-app>
